# homosm4

./: CMakeLists.txt  README.md  boot_sm4_decrypt.cpp  boot_sm4_encrypt.cpp  homo_sm4_decrypt.cpp  homo_sm4_encrypt.cpp  originsm4.cpp
